# django_htmx

./: .dockerignore  .editorconfig  .env.sample  .gitlint  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
project/: urls.py
project/authentication/: admin.py  apps.py  forms.py  htmx_views.py  managers.py  models.py  urls.py  views.py
project/authentication/migrations/: 0001_create_user_model.py
project/pages/: apps.py  urls.py  views.py
project/settings/: __init__.py
project/static/css/: main.css
project/templates/: base.html  form_renderer.html
project/templates/accounts/: login.html  signup.html
project/templates/pages/: index.html
project/templates/partial/: navbar.html
project/templates/todos/: list.html
project/templates/todos/partial/: list.html  todo_item.html
project/todos/: admin.py  apps.py  htmx_views.py  models.py  urls.py  views.py
project/todos/migrations/: 0001_create_todo_model.py  0002_remove_description_and_add_state_field_to_todo_model.py  0003_change_due_to_date_in_todo_model.py  0004_remove_state_field_and_add_is_done_field_to_todo_model.py
