[tool.poetry]
name = "todo-list-django"
version = "0.0.0"
description = "A simple todo list with django"
authors = ["thisisjab <heythisisjab@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
django = "^4.2.4"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
poethepoet = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
prepare = 'pre-commit install'
